--- a/railway.toml
+++ b/railway.toml
@@ -4,4 +4,4 @@ builder = "NIXPACKS"
 [deploy]
 healthcheckPath = "/"
 healthcheckTimeout = 300
-startCommand = "pnpm start"
+startCommand = "corepack pnpm start"
