Fix: Add health check endpoint at /api/health for Railway monitoring

--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,6 @@
 builder = "NIXPACKS"
 
 [deploy]
-healthcheckPath = "/"
+healthcheckPath = "/api/health"
 healthcheckTimeout = 300
 startCommand = "corepack pnpm start"
