Fix: Use Next.js standalone output to include all dependencies at runtime

--- a/railway.toml
+++ b/railway.toml
@@ -4,4 +4,4 @@ builder = "NIXPACKS"
 [deploy]
 healthcheckPath = "/api/health"
 healthcheckTimeout = 300
-startCommand = "corepack pnpm exec next start -p ${PORT:-3000}"
+startCommand = "node .next/standalone/server.js"
