--- a/railway.toml
+++ b/railway.toml
@@ -4,4 +4,4 @@ builder = "NIXPACKS"
 [deploy]
 healthcheckPath = "/api/health"
 healthcheckTimeout = 300
-startCommand = "node .next/standalone/server.js"
+startCommand = "PORT=${PORT:-3000} node .next/standalone/server.js"
