debug: Add build-time and runtime env var logging

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"build": "next build",
 		"start": "next start",
 		"predev": "pnpm run generate",
-		"prebuild": "pnpm run generate",
+		"prebuild": "pnpm run generate && node scripts/check-env-vars.js",
 		"lint": "eslint",
 		"generate": "graphql-codegen --config .graphqlrc.ts",
 		"prepare": "husky install"
